fix:Consertando nível de autoridade do atendente para teste no SecurityConfig(2).